# learn-python-fargate-task-github-actions

./: .editorconfig  .gitignore  pyproject.toml
.github/workflows/: deploy-infra.yml  test-flow.yml
cdk/: cdk.json  package-lock.json  package.json
cdk/lib/: cdk-stack.ts
cdk/lib/modules/app/: ecs.ts
cdk/lib/modules/network/: app-security-group.ts
src/app/: __init__.py  __main__.py  sum.py
tests/app/: test_sum.py
