[project]
name = "app"
version = "0.1.0"
dependencies = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
"app" = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
test = { cmd = "pytest --junitxml=.reports/junit/test-results.xml" }
test-coverage = { cmd = "pytest --junitxml=.reports/junit/test-results.xml --cov=./ --cov-report=html --cov-report=lcov --cov-report=xml --cov-report=term-missing"}

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.coverage.run]
branch = true
data_file = ".reports/coverage/.coverage"
source = [
  "src",
  "tests"
]
  
[tool.coverage.report]
ignore_errors = true
show_missing = true
# skip_covered = true

[tool.coverage.html]
directory = ".reports/coverage/html"
[tool.coverage.xml]
output = ".reports/coverage/coverage.xml"
[tool.coverage.lcov]
output = ".reports/coverage/coverage.lcov"