[project]
name = "app"
version = "0.1.0"
dependencies = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
"app" = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
test = { cmd = "pytest" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
addopts = "--junitxml=.reports/junit/test-results.xml --cov=./ --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
branch = true
data_file = ".reports/coverage/.coverage"
source = [
  "src",
  "tests"
]
  
[tool.coverage.report]
# fail_under = 100
precision = 1
show_missing = true
# skip_covered = true

[tool.coverage.html]
directory = ".reports/coverage/html"